# trace

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-build.yml
docs/: ADAPTER_REGISTRY.md  ADOPTION_READINESS.md  ARCHITECTURE.md  BENCHMARK_GOVERNANCE.md  EVIDENCE_PACKAGE_SPEC.md  EXECUTIVE_SUMMARY.md  FIRST_10_MINUTES.md  HOSTED_PROVIDER_SETUP.md  INSTALL_AND_RELEASE.md  LAB_DEPLOYMENT_NOTES.md  LIVE_PROVIDER_HARDENING.md  PACKAGING_AND_DEMO.md  PARTNER_BRIEF.md  PILOT_EVALUATION.md  PRODUCT_GOALS.md  PROVIDER_DRIFT_POLICY.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.1.3.md  RELEASE_TAGGING.md  ROADMAP.md  THREAT_MODEL.md  VALIDATION.md
examples/: README.md
examples/benchmark_comparison/: artifact_manifest.json  artifact_manifest.sig  artifact_trust.json  bench_signer_cert.pem  bench_signer_public.pem  benchmark_comparison.json  benchmark_comparison.md
examples/benchmark_comparison_live_hosted/: artifact_manifest.json  artifact_manifest.sig  artifact_trust.json  benchmark_comparison.json  benchmark_comparison.md  live_cert.pem  live_chain.pem  live_public.pem
examples/benchmark_comparison_live_hosted_hardened/: artifact_manifest.json  artifact_manifest.sig  artifact_trust.json  benchmark_comparison.json  benchmark_comparison.md  hardened_cert.pem  hardened_chain.pem  hardened_public.pem
examples/benchmark_history/: benchmark_compare_heuristic_vs_hosted_latest.json  benchmark_compare_heuristic_vs_hosted_latest_2026-04-19T14-54-34+00-00.json  benchmark_compare_heuristic_vs_hosted_latest_history_summary.json  benchmark_compare_heuristic_vs_hosted_latest_history_summary.md  benchmark_compare_heuristic_vs_hosted_latest_trend_summary.json  benchmark_compare_heuristic_vs_hosted_latest_trend_summary.md  benchmark_compare_heuristic_vs_live-hosted_latest.json  benchmark_compare_heuristic_vs_live-hosted_latest_2026-04-19T15-19-45+00-00.json  benchmark_compare_heuristic_vs_live-hosted_latest_2026-04-19T15-28-02+00-00.json  benchmark_compare_heuristic_vs_live-hosted_latest_2026-04-19T15-33-37+00-00.json  benchmark_compare_heuristic_vs_live-hosted_latest_2026-04-19T15-34-46+00-00.json  benchmark_compare_heuristic_vs_live-hosted_latest_history_summary.json  benchmark_compare_heuristic_vs_live-hosted_latest_history_summary.md  benchmark_heuristic_latest.json  (+21 more)
scripts/: build_release.sh  demo_trace.sh
src/trace/: cli.py  (+9 more)
tests/: test_trace.py
validation/: companion_incident.json  reference_benign_case.json  reference_long_case.json  reference_mixed_case.json  reference_noisy_case.json
(+66 files in other folders)
