[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-forensics"
version = "0.1.0"
description = "TRACE: Trajectory Analysis for Conversational Evidence"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Dylan D. Mobley"}
]
dependencies = []

[project.scripts]
trace = "trace.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
