[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-forensics"
version = "0.1.0"
description = "TRACE: Trajectory Analysis for Conversational Evidence"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "Dylan D. Mobley"}
]
dependencies = []
keywords = ["digital-forensics", "evidence", "ai-forensics", "conversational-forensics", "trace"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Legal Industry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/empathyethicist/trace"
Repository = "https://github.com/empathyethicist/trace"
Issues = "https://github.com/empathyethicist/trace/issues"

[project.scripts]
trace = "trace_forensics.cli:run_cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
